# rs_clean

./: Cargo.toml  README.md  README_zh.md  rs_clean.example.toml
.github/workflows/: release.yml
src/: cmd.rs  config.rs  constant.rs  lib.rs  main.rs  utils.rs
