[package]
name = "rs_clean"
version = "0.2.0"
edition = "2021"

description = "Rust project that provides a command-line tool designed for cleaning up build artifacts within projects. "
authors = ["coderpwh"]
repository = "https://github.com/pwh-pwh/rs_clean"
license = "MIT"
readme = "./README.md"
rust-version = "1.80"
keywords = ["cli", "tools", "clean-tools"]
categories = ["command-line-utilities","development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rs_clean"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
walkdir = "2.5.0"
which = "4.4.0"
tokio = { version = "1", features = ["full", "fs"] }
futures = "0.3"
indicatif = "0.17.8"
